k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels:
    app: task
  name: task
spec:  
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: task
  strategy:
    rollingUpdate:
      maxSurge: 80%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: task
      name: task
    spec:
      containers:
      - image: hattori/task-pi
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 3
        name: task
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /v1/health/ping
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 50m
            memory: 100Mi
          requests:
            cpu: 25m
            memory: 25Mi
        securityContext:
          privileged: false
