k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: task.mydomain.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: task
                port:
                  number: 80
